# RustLaTex

./: .gitignore  Cargo.toml  README.md  roadmap.md  spec.md
.github/workflows/: ci.yml
crates/rustlatex-cli/: Cargo.toml
crates/rustlatex-cli/src/: main.rs
crates/rustlatex-cli/tests/: cli_error_tests.rs  gs_tests.rs  integration_tests.rs  pdflatex_comparison_test.rs
crates/rustlatex-engine/: Cargo.toml
crates/rustlatex-engine/src/: lib.rs
crates/rustlatex-lexer/: Cargo.toml
crates/rustlatex-lexer/src/: lib.rs
crates/rustlatex-parser/: Cargo.toml
crates/rustlatex-parser/src/: expander.rs  lib.rs
crates/rustlatex-pdf/: Cargo.toml
crates/rustlatex-pdf/src/: lib.rs
examples/: compare.tex  hello.tex  lists.tex  math.tex  sections.tex  simple.tex
